--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Posts#index</h1>
 <p>Find me in app/views/posts/index.html.erb</p>
+
+<% @posts.each do |post| %>
+  <h2><%= post.title %></h2>
+  <p><%= truncate(post.body, :length => 35 )%></p>
+  <br>
+  <%= link_to "Read Post", post %>
+<% end %>
